# AAMatcher

./: Bitsprayer.cpp  Bitsprayer.h  CMakeLists.txt  MakeTables.py  Processing.py  SDA.cpp  SDA.h  TestProcessing.py  job_array.sh  job_arrayBeluga.sh  job_arrayBeluga1.sh  job_arrayGraham.sh  job_arrayNarval1.sh  main.cpp  main.h  run_many.sh  testing.cpp  testing.h  testing.py
CC/: job_arrayBeluga.sh  job_arrayNarval.sh  run_many.sh
Processing/: MakeTables.py  Processing.py  TestProcessing.py
Python/: MakeTables.py  Processing.py
src/: SDA.h  main.cpp  main.h  testing.cpp  testing.h
